Updating gh-pages from master branch via GitBot

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <nav>
-      <a href="#" class="nodeco"><img src="images/mediacom_notag@1x.png" class="logo">
+      <a href="#" class="nodeco"><img src="images/mediacomlogo.png" class="logo">
       <a href="#">Shop</a>
       <a href="#">Products</a>
       <a href="#">About</a>
