--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
   <head>
     <title>Mediacom Styles</title>
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link type="text/css" rel="stylesheet" href="css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <nav>
+      <div id="mobilenav"><i class="fa fa-bars" aria-hidden="true"></i></div>
       <a href="#" class="nodeco"><img src="images/mediacomlogo.png" class="logo">
-      <a href="#">Shop</a>
-      <a href="#">Products</a>
-      <a href="#">About</a>
-      <div class="utilities">
+      <a href="#" class="navlink">Shop</a>
+      <a href="#" class="navlink">Products</a>
+      <a href="#" class="navlink">About</a>
       <a href="#" class="utilitylink">Account</a>
       <a href="#" class="utilitylink">Business</a>
       <a href="#" class="utilitylink">Support</a>
@@ -26,8 +27,8 @@
     <div id="wrapper">
 
     <section>
-      <h5 class="footerheader">Typography</h5>
-
+      <h5 class="sectionheader">Typography</h5>
+      <h5 class="breadcrumb">This is &#9656; a breadcrumb</h5>
       <h1>This is h1</h1>
       <h2>This is h2</h2>
       <h3>This is h3</h3>
@@ -41,31 +42,47 @@
     </section>
 
     <section>
-      
-      <h5 class="footerheader">Buttons</h5>
-
-        <button><a href="#">Medium Button</a></button><br>
-        <button class="small"><a href="#">Small Button</a></button>
-
+      <h5 class="sectionheader">Buttons</h5>
+        <button href="#">Medium Button</button>
+        <br>
+        <button href="#" disabled="true">Medium Button</button>
+        <br>
+        <button href="#" class="smallbutton">Small Button</button>
+        <br>
+        <button href="#" class="smallbutton" disabled="true">Small Button</button>
+        <br>
+        <button href="#" class="back smallbutton"><img src="images/backcaret.svg" class="buttoniconr">Back</button>
+        <button href="#" class="smallbutton">Next<img src="images/whitecaret.svg" class="buttoniconl"></button>
+        <br>
+        <button href="#">Start Shopping &nbsp;&nbsp;
+        <svg width="15px" height="10px" viewBox="133 0 15 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+            <g id="Icon-Arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(134.000000, 1.000000)" stroke-linecap="round">
+                <g id="Arrow-Icon" stroke="#FFFFFF" stroke-width="2">
+                    <polyline id="Path-1" stroke-linejoin="round" transform="translate(10.105263, 4.000000) scale(1, -1) rotate(-90.000000) translate(-10.105263, -4.000000) " points="6.31578947 2 10.1052632 6 13.8947368 2"></polyline>
+                    <path d="M10.4395949,4 L0,4" id="Path-4883"></path>
+                </g>
+            </g>
+        </svg>
+        </button>
+         <br>
+        <button href="#"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;&nbsp;Check Availability</button>
     </section>
 
     <section>
-
-      <h5 class="footerheader">Links with Icons and SVGS</h5>
-
-      <a href="#" class="buttonblue">Carrot Button</a><img src="images/bluecarrot.svg">
+      <h5 class="sectionheader">Links with Icons and SVGS</h5>
+      <a href="#" class="ctablue">Caret Button</a><img src="images/bluecaret.svg" class="buttoniconl">
       <br>
       <br>
-      <a href="#" class="buttonpurple">Purple Button for tv psu pages</a><img src="images/purplecarrot.svg">
+      <a href="#" class="ctapurple">Purple Button for tv psu pages</a><img src="images/purplecaret.svg">
       <br>
       <br>
-      <a href="#" class="buttonblue">Badass Arrow Button</a><img src="images/bluearrow.svg">
+      <a href="#" class="ctablue">Badass Arrow Button</a><img src="images/bluearrow.svg" class="buttoniconl">
       <br>
       <br>
-      <img src="images/downcarrot.svg"><a href="#" class="details">See details</a>
+      <img src="images/downcaret.svg"><a href="#" class="seedetails">See details</a>
       <br>
       <br>
-      <img src="images/upcarrot.svg"><a href="#" class="details">See less</a>
+      <img src="images/upcaret.svg"><a href="#" class="seedetails">See less</a>
 
     </section>
 
@@ -73,10 +90,12 @@
 
     </div>
     <footer>
-    <h5 class="footerheader">Footer Header</h5>
+    <h5>Footer Header</h5>
     <a href="#">Footer link</a>
     </footer>
 
     <script type="text/javascript" src="js/project.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+
   </body>
 </html>
