--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <section>
       <h5 class="sectionheader">Typography</h5>
       <h5 class="smalltext">This is &#9656; a breadcrumb</h5>
-      <h1>This is h1</h1>
+      <h1>Digital is h1</h1>
       <h2>This is h2</h2>
       <h3>This is h3</h3>
       <h4>This is h4</h4>
