Added fonts and styles

--- a/index.html
+++ b/index.html
@@ -57,14 +57,14 @@
 
         <button href="#" class="buttonsmall ctatext white">Next<img src="images/whitecaret.svg" class="buttoniconl"></button>
         <br>
-        <button href="#" class="ctatext white">Start Shopping &nbsp;&nbsp;<svg width="15px" height="10px" viewBox="133 0 15 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+        <button href="#" class="ctatext white">Start Shopping &nbsp;&nbsp;
+        <svg width="15px" height="10px" viewBox="133 0 15 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
             <g id="Icon-Arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(134.000000, 1.000000)" stroke-linecap="round">
                 <g id="Arrow-Icon" stroke="#FFFFFF" stroke-width="2">
                     <polyline id="Path-1" stroke-linejoin="round" transform="translate(10.105263, 4.000000) scale(1, -1) rotate(-90.000000) translate(-10.105263, -4.000000) " points="6.31578947 2 10.1052632 6 13.8947368 2"></polyline>
                     <path d="M10.4395949,4 L0,4" id="Path-4883"></path>
                 </g>
-            </g>
-        </svg>
+            </g></svg>
         </button>
         <br>
         <button href="#" class="ctatext white"><i class="fa fa-map-marker" aria-hidden="true"></i>&nbsp;&nbsp;Check Availability</button>
@@ -80,7 +80,7 @@
       <a href="#" class="ctatext purple">Purple Button for tv psu pages</a><img src="images/purplecaret.svg" class="buttoniconl">
       <br>
       <br>
-      <a href="#" class="ctatext blue">Badass Arrow Button</a><img src="images/bluearrow.svg" class="buttoniconl">
+      <a href="#" class="ctatext blue">Arrow Button</a><img src="images/bluearrow.svg" class="buttoniconl">
       <br>
       <br>
       <img src="images/downcaret.svg" class="buttoniconr"><a href="#">See details</a>
@@ -92,9 +92,9 @@
 
     <section>
       <h5 class="sectionheader">Big buttons</h5>
-      <div class="xlbuttons gray5 clearfix">
-        <br>
-        <div class="buttonxl navybg"><a href="#">
+      <div class="gray5">
+        <div class="buttonxlwrapper clearfix">
+          <div class="buttonxl navybg"><a href="#">
           <span class="ctatext white">Learn More</span>
           <svg width="15px" height="10px" viewBox="133 0 15 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
               <g id="Icon-Arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(134.000000, 1.000000)" stroke-linecap="round">
@@ -105,21 +105,25 @@
               </g>
           </svg>
           <h1 class="white">Why Mediacom?</h1></a>
-        </div>
+          </div>
 
-        <div class="buttonxl contactusbg"><a href="#">
+          <div class="buttonxl contactusbg"><a href="#">
           <span class="ctatext white">Contact Us</span>
-          <svg width="15px" height="10px" viewBox="133 0 15 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Icon-Arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(134.000000, 1.000000)" stroke-linecap="round"><g id="Arrow-Icon" stroke="#FFFFFF" stroke-width="2"><polyline id="Path-1" stroke-linejoin="round" transform="translate(10.105263, 4.000000) scale(1, -1) rotate(-90.000000) translate(-10.105263, -4.000000) " points="6.31578947 2 10.1052632 6 13.8947368 2"></polyline><path d="M10.4395949,4 L0,4" id="Path-4883"></path></g></g></svg>
+          <svg width="15px" height="10px" viewBox="133 0 15 10" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"><g id="Icon-Arrow" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(134.000000, 1.000000)" stroke-linecap="round"><g id="Arrow-Icon" stroke="#FFFFFF" stroke-width="2"><polyline id="Path-1" stroke-linejoin="round" transform="translate(10.105263, 4.000000) scale(1, -1) rotate(-90.000000) translate(-10.105263, -4.000000) " points="6.31578947 2 10.1052632 6 13.8947368 2"></polyline><path d="M10.4395949,4 L0,4" id="Path-4883"></path>
+          </g>
+          </g>
+          </svg>
           <h1 class="white">We're here <br>to help</h1></a>
+          </div>
         </div>
-        <br>
       </div>
     </section>
 
     <section>
       <h5 class="sectionheader">Form Fields</h5>
-      <input type="text" placeholder="Text">
-      <input type="text" placeholder="Invalid" class="invalid">
+      <input type="text" placeholder="Text" autocomplete="on" required>
+      <input type="text" placeholder="Looks good" autocomplete="on" required>
+      <input type="text" placeholder="Has an error" autocomplete="on" required>
       </section>
 
 
